--- a/Practice_2020/HW5/css/style.css
+++ b/Practice_2020/HW5/css/style.css
@@ -96,8 +96,27 @@ main {
     background-image: linear-gradient(rgba(81, 176,220, 0.3), rgba(46, 122, 196, 0.3));
 
     color: white;
-    font-size: 14px
+    font-size: 14px;
 }
+
+input:focus {
+    background-color: #1b5288;
+    box-shadow: 0 1px 9px 0 rgba(47,123, 197,0.77),
+                inset 0 1px 2px 0 rgba( 0, 0, 0, 0.1),
+                0 1px 0 0 #4b4b4b,
+                inset 0 2px 5px 0 rgba( 0, 0, 0, 0.2);
+
+    background-image: linear-gradient(#1b4f81, #1c5082);
+    border: 1px solid #1b4f81;
+    outline:none;
+}
+
+input:focus::-moz-placeholder { color:  #fffbfb; }
+input:focus:-moz-placeholder { color:  #fffbfb; }
+input:focus:-ms-input-placeholder { color:  #fffbfb; }
+input:focus::-webkit-input-placeholder { color:  #fffbfb; }
+input:focus::placeholder { color:  #fffbfb; }
+
 
 .registration__form__agree {
     font-size: 11px;
