--- a/Practice_2020/HW5/css/style.css
+++ b/Practice_2020/HW5/css/style.css
@@ -2,7 +2,7 @@ body {
     width: 1215px;
     margin: 0 auto;
 
-    font-family: Tahoma, Arial, sans-serif;
+    font-family: Helvetica Nneue Regular, Tahoma , sans-serif;
     color: #fff;
 }
 
@@ -62,6 +62,7 @@ main {
     display: flex;
     flex-direction: column;
 
+    width: 50%;
 }
 
 .registration__form__fields > input+input {
@@ -74,7 +75,7 @@ main {
     padding-left: 17px;
     border: 1px solid transparent;
     border-bottom: 1px solid #4b4b4b;
-    box-shadow: inset 0 2px 0 5px rgba(29 26 22 0.2);
+    box-shadow: inset 0 2px 0 5px rgba(29, 26, 22, 0.2);
 
     line-height: 35px;
     font-size: 14px;
@@ -111,11 +112,11 @@ input:focus {
     outline:none;
 }
 
-input:focus::-moz-placeholder { color:  #fffbfb; }
-input:focus:-moz-placeholder { color:  #fffbfb; }
-input:focus:-ms-input-placeholder { color:  #fffbfb; }
-input:focus::-webkit-input-placeholder { color:  #fffbfb; }
-input:focus::placeholder { color:  #fffbfb; }
+input:focus::-moz-placeholder { color: #fffbfb; }
+input:focus:-moz-placeholder { color: #fffbfb; }
+input:focus:-ms-input-placeholder { color: #fffbfb; }
+input:focus::-webkit-input-placeholder { color: #fffbfb; }
+input:focus::placeholder { color: #fffbfb; }
 
 
 .registration__form__agree {
