--- a/Practice_2020/HW6/css/style.css
+++ b/Practice_2020/HW6/css/style.css
@@ -28,8 +28,7 @@ body {
 }
 
 .search:first-child {
-    width: 412px;
-    height: 132px;
+   margin-left: 4px;
     box-shadow: 0 5px 5px 0 rgba(104, 104, 104, 0.75);
 }
 
@@ -43,4 +42,103 @@ body {
     border-radius: 16px;
     width: 266px;
     height: 133px;
+}
+
+.search__header {
+    display: flex;
+
+    font-family: "Arial Black", Arial, sans-serif;
+    letter-spacing: 0.025em;
+    font-size: 12px;
+    color: #154467;
+}
+
+.search__header1 {
+    margin-top: -2px;
+    margin-left: 65px;
+}
+
+.search__header2 {
+    font-size: 10px;
+    color: #154468;
+}
+
+.search:first-child .search__header {
+    margin-bottom: 3px;
+
+    color: #154467;
+    letter-spacing: 0.025em;
+}
+
+.search_by_car__forms {
+    display: flex;
+    justify-content: space-around;
+
+    font-family: Arial,sans-serif;
+    letter-spacing: 0.025em;
+}
+
+label {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+form label + label {
+    margin-top: 3px;
+}
+
+.select-css_short-justify {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.search_by_car .search__header_discs {
+    margin-top: 2px;
+    margin-left: 20px;
+}
+
+.search_by_car .search__header_tyres {
+
+    margin-left: 72px;
+    margin-right: 20px;
+}
+
+.search_field__name {
+    font-size: 10px;
+    color: #000000;
+}
+
+.search_field__subname {
+    font-size: 8px;
+    color: #77858b;
+    margin-top: -6px;
+}
+
+.select-css {
+    box-shadow: inset 1px 1px 1px 0 rgba(0, 0,0, 0.75);
+    background-image: url("../img/search_select_arrow.png"),linear-gradient(to bottom, #ffffff 0%,#ffffff 100%);
+    background-repeat: no-repeat;
+    background-position: right 50%;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    height: 17px;
+    width: 100px;
+    padding-left: 5px;
+    padding-right: 15px;
+    font-size: 11px;
+}
+
+.select-css_short {
+    width: 58px;
+}
+
+.select-name {
+    margin-top: -3px;
+    margin-left: 4px;
+}
+
+.select-css_short-justify .select-css_short {
+    margin-left: 13px;
 }
