Added right and left columns to main content

--- a/Practice_2020/HW6/css/main-search.css
+++ b/Practice_2020/HW6/css/main-search.css
@@ -1,3 +1,6 @@
+.main__search {
+    display: flex;
+}
 .search {
     border-style: solid;
     border-width: 1px;
@@ -20,7 +23,7 @@
     border-radius: 18px;
 }
 
-.search:nth-child(3){
+.search_discs{
     border-radius: 16px;
 }
 
