--- a/Practice_2020/HW6/css/style.css
+++ b/Practice_2020/HW6/css/style.css
@@ -3,7 +3,6 @@ body {
     margin: 0 auto;
 
     font-family: Arial, sans-serif;
-
 }
 
 .text_color_white {
@@ -16,7 +15,108 @@ body {
     height: 237px;
 }
 
-.main__search {
+/*CONTENT*/
+
+.main__content {
     display: flex;
+    justify-content: space-between;
+    margin-top: 15px;
+    width: 100%;
 }
 
+.catalog {
+    margin-top: 2px;
+    font-family: "Lucida Sans Unicode", Arial, sans-serif;
+}
+
+.name__frame {
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(121, 135, 141);
+    border-radius: 20px;
+}
+
+.catalog_name {
+    box-shadow: 0 3px 3px 0 rgba(150, 150, 150, 0.75);
+    width: 182px;
+    height: 27px;
+    margin-bottom: 14px;
+
+    letter-spacing: -0.05em;
+    line-height: 28px;
+}
+
+.catalog_name:before {
+    float: left;
+    margin-top: 2px;
+    margin-right: 3px;
+    margin-left: 3px;
+    content: '';
+    width: 22px;
+    height: 21px;
+    border-radius: 50%;
+    background-color: #0f3c60;
+    background: url("../img/main_catalog_name.png") no-repeat center center,
+                linear-gradient( -90deg, rgb(32,105,136) 0%, rgb(17,65,101) 59%, rgb(15,58,94) 85%, rgb(12,50,86) 100%);
+
+}
+
+.catalog_name,
+.catalog_item{
+    text-transform: uppercase;
+    font-size: 14px;
+    color: #114165;
+}
+
+.catalog_item_name {
+    display: inline-block;
+    margin-bottom: 2px;
+    width: 152px;
+    height: 28px;
+
+    line-height: 29px;
+}
+
+.catalog_item_name:before {
+    float: left;
+    margin-top: 1px;
+    margin-right: 3px;
+    margin-left: 5px;
+    content: '';
+    width: 23px;
+    height: 23px;
+    border-radius: 50%;
+    border: 6px solid rgb(17, 65, 101);
+    background-color: #ffffff;
+}
+
+.catalog_list .catalog_sublist {
+    list-style: circle;
+    margin-left: 54px;
+    padding-left: 0;
+}
+
+.catalog_sublist .catalog_sublist_item + .catalog_sublist_item {
+    margin-top: 5px;
+}
+
+ul li .catalog_sublist_link {
+    margin-left: -6px;
+
+    color: inherit;
+    text-transform: none;
+    text-decoration: none;
+    font-size: 13px;
+}
+
+ul li .active {
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    font-style: italic;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+ul li .catalog_sublist_link:visited {
+     color: inherit;
+}
