--- a/Practice_2020/HW6/css/style.css
+++ b/Practice_2020/HW6/css/style.css
@@ -126,11 +126,8 @@ ul li .catalog_sublist_link:visited {
 .tyres_list {
     display: flex;
     flex-flow: wrap;
-    /*justify-content: space-evenly;*/
     border-radius: 3px;
     background-image: linear-gradient( to bottom, #e5e7e8 0%, 57%, rgb(118,141,151) 100%);
-    /*background-image: -webkit-linear-gradient( 90deg, rgb(35,75,93) 0%, rgb(118,141,151) 57%, rgb(201,207,209) 100%);
-    background-image: -ms-linear-gradient( 90deg, rgb(35,75,93) 0%, rgb(118,141,151) 57%, rgb(201,207,209) 100%);*/
     width: 60%;
     padding-top: 12px;
     padding-left: 3%;
@@ -155,7 +152,6 @@ ul li .catalog_sublist_link:visited {
     margin-left: 4%;
     margin-right: 5%;
 }
-
 
 .tyres_brand {
     font-size: 15px;
@@ -185,4 +181,87 @@ ul li .catalog_sublist_link:visited {
     font-weight: bold;
     font-style: italic;
     color: #114165;
+}
+
+/*RIGHT COLUMN*/
+
+.brands .catalog_list .catalog_item:nth-child(2) {
+    margin-top: 14px;
+}
+
+.brands .catalog_list .catalog_item:nth-child(2) .catalog_item_name {
+    margin-bottom: 4px;
+}
+
+.brands .catalog_sublist {
+    list-style: none;
+}
+
+.brands .catalog_item_name {
+    margin-top: -1px;
+    margin-left: 14px;
+    width: 138px;
+}
+
+.brands .catalog_sublist_item {
+    margin-top: 4px;
+    margin-left: -12px;
+    text-transform: none;
+    font-size: 13px;
+}
+
+.brands .checkbox-css {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+
+.brands .checkbox-css + label {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+    margin-left: 7px;
+}
+
+.brands .checkbox-css + label:before {
+    position: absolute;
+    left: -23px;
+    content: '';
+    display: inline-block;
+    width: 9px;
+    height: 9px;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(17, 65, 101);
+    box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.75);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
+.brands .checkbox-css:checked + label:before {
+    background-image: url("../img/check.png");
+}
+
+.brands input[type=submit] {
+    padding: 3px 15px 5px;
+    margin-top: 19px;
+    margin-left: 23px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(167, 171, 174);
+    border-radius: 15px;
+    background-color: #114165;
+    background-image: -moz-linear-gradient( -90deg, rgb(32,105,136) 0%, rgb(17,65,101) 59%, rgb(15,58,94) 85%, rgb(12,50,86) 100%);
+    background-image: -webkit-linear-gradient( -90deg, rgb(32,105,136) 0%, rgb(17,65,101) 59%, rgb(15,58,94) 85%, rgb(12,50,86) 100%);
+    background-image: -ms-linear-gradient( -90deg, rgb(32,105,136) 0%, rgb(17,65,101) 59%, rgb(15,58,94) 85%, rgb(12,50,86) 100%);
+    cursor:pointer;
+
+    color: white;
+    font-family: Arial, sans-serif;
+    font-size: 11px;
+    text-transform: uppercase;
 }
