--- a/Practice_2020/HW6/css/style.css
+++ b/Practice_2020/HW6/css/style.css
@@ -15,253 +15,15 @@ body {
     height: 237px;
 }
 
-/*CONTENT*/
+/*ASIDE*/
 
-.main__content {
+.banners {
     display: flex;
-    justify-content: space-between;
-    margin-top: 15px;
-    width: 100%;
+    justify-content: space-evenly;
+    width: 77%;
+    margin: 0 auto;
 }
 
-.catalog {
-    margin-top: 2px;
-    font-family: "Lucida Sans Unicode", Arial, sans-serif;
-}
-
-.name__frame {
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(121, 135, 141);
-    border-radius: 20px;
-}
-
-.catalog_name {
-    box-shadow: 0 3px 3px 0 rgba(150, 150, 150, 0.75);
-    width: 182px;
-    height: 27px;
-    margin-bottom: 14px;
-
-    letter-spacing: -0.05em;
-    line-height: 28px;
-}
-
-.catalog_name:before {
-    float: left;
-    margin-top: 2px;
-    margin-right: 3px;
-    margin-left: 3px;
-    content: '';
-    width: 22px;
-    height: 21px;
-    border-radius: 50%;
-    background-color: #0f3c60;
-    background: url("../img/main_catalog_name.png") no-repeat center center,
-                linear-gradient( -90deg, rgb(32,105,136) 0%, rgb(17,65,101) 59%, rgb(15,58,94) 85%, rgb(12,50,86) 100%);
-
-}
-
-.catalog_name,
-.catalog_item{
-    text-transform: uppercase;
-    font-size: 14px;
-    color: #114165;
-}
-
-.catalog_item_name {
-    display: inline-block;
-    margin-bottom: 2px;
-    width: 152px;
-    height: 28px;
-
-    line-height: 29px;
-}
-
-.catalog_item_name:before {
-    float: left;
-    margin-top: 1px;
-    margin-right: 3px;
-    margin-left: 5px;
-    content: '';
-    width: 23px;
-    height: 23px;
-    border-radius: 50%;
-    border: 6px solid rgb(17, 65, 101);
-    background-color: #ffffff;
-}
-
-.catalog_list .catalog_sublist {
-    list-style: circle;
-    margin-left: 54px;
-    padding-left: 0;
-}
-
-.catalog_sublist .catalog_sublist_item + .catalog_sublist_item {
-    margin-top: 5px;
-}
-
-ul li .catalog_sublist_link {
-    margin-left: -6px;
-
-    color: inherit;
-    text-transform: none;
-    text-decoration: none;
-    font-size: 13px;
-}
-
-ul li .active {
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-    font-style: italic;
-    font-weight: bold;
-    text-decoration: underline;
-}
-
-ul li .catalog_sublist_link:visited {
-     color: inherit;
-}
-
-/*TYRES LIST*/
-
-.tyres_list {
-    display: flex;
-    flex-flow: wrap;
-    border-radius: 3px;
-    background-image: linear-gradient( to bottom, #e5e7e8 0%, 57%, rgb(118,141,151) 100%);
-    width: 60%;
-    padding-top: 12px;
-    padding-left: 3%;
-    padding-bottom: 30px;
-    margin-left: 9px;
-    margin-right: 9px;
-
-    font-family: "Lucida Sans Unicode", Arial, sans-serif;
-}
-
-.tyres_item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.tyres_item:nth-child(n+4) {
-    margin-top: 14px;
-}
-
-.tyres_item:nth-child(3n-1) {
-    margin-left: 4%;
-    margin-right: 5%;
-}
-
-.tyres_brand {
-    font-size: 15px;
-    color: #206988;
-}
-
-.tyres_model {
-    margin-top: -7px;
-    font-size: 13px;
-}
-
-.tyres_image {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid rgb(164, 174, 177);
-    border-radius: 7px;
-    background-color: rgb(255, 255, 255);
-    width: 142px;
-    height: 131px;
-    margin-top: -3px;
-}
-
-.tyres_price {
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    font-weight: bold;
-    font-style: italic;
-    color: #114165;
-}
-
-/*RIGHT COLUMN*/
-
-.brands .catalog_list .catalog_item:nth-child(2) {
-    margin-top: 14px;
-}
-
-.brands .catalog_list .catalog_item:nth-child(2) .catalog_item_name {
-    margin-bottom: 4px;
-}
-
-.brands .catalog_sublist {
-    list-style: none;
-}
-
-.brands .catalog_item_name {
-    margin-top: -1px;
-    margin-left: 14px;
-    width: 138px;
-}
-
-.brands .catalog_sublist_item {
-    margin-top: 4px;
-    margin-left: -12px;
-    text-transform: none;
-    font-size: 13px;
-}
-
-.brands .checkbox-css {
-    position: absolute;
-    z-index: -1;
-    opacity: 0;
-}
-
-.brands .checkbox-css + label {
-    position: relative;
-    display: inline-flex;
-    align-items: center;
-    user-select: none;
-    margin-left: 7px;
-}
-
-.brands .checkbox-css + label:before {
-    position: absolute;
-    left: -23px;
-    content: '';
-    display: inline-block;
-    width: 9px;
-    height: 9px;
-    flex-shrink: 0;
-    flex-grow: 0;
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(17, 65, 101);
-    box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.75);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-}
-
-.brands .checkbox-css:checked + label:before {
-    background-image: url("../img/check.png");
-}
-
-.brands input[type=submit] {
-    padding: 3px 15px 5px;
-    margin-top: 19px;
-    margin-left: 23px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(167, 171, 174);
-    border-radius: 15px;
-    background-color: #114165;
-    background-image: -moz-linear-gradient( -90deg, rgb(32,105,136) 0%, rgb(17,65,101) 59%, rgb(15,58,94) 85%, rgb(12,50,86) 100%);
-    background-image: -webkit-linear-gradient( -90deg, rgb(32,105,136) 0%, rgb(17,65,101) 59%, rgb(15,58,94) 85%, rgb(12,50,86) 100%);
-    background-image: -ms-linear-gradient( -90deg, rgb(32,105,136) 0%, rgb(17,65,101) 59%, rgb(15,58,94) 85%, rgb(12,50,86) 100%);
-    cursor:pointer;
-
-    color: white;
-    font-family: Arial, sans-serif;
-    font-size: 11px;
-    text-transform: uppercase;
+.banners .banner_up {
+   margin-top: -4px;
 }
