--- a/Practice_2020/HW7-8/main-menu/main-menu.css
+++ b/Practice_2020/HW7-8/main-menu/main-menu.css
@@ -2,50 +2,60 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2);
-    border: 1px solid #051116;
-    background-color: rgba(54, 41, 62, 0.9);
-    border-radius: 15px;
-}
-
-.main-menu__list {
-    width: 253px;
 }
 
 .main-menu__item {
-   /* display: none;*/
     position: relative;
-    text-align: center;
-    width: 100%;
+    display: inline-block;
+    width: 253px;
     border-bottom: 2px solid #35273d;
-    box-shadow: 0 -1px 0 0 rgba(105, 82, 114, 0.59) inset;
+    text-align: center;
 }
 
 .main-menu__item:first-child {
-    border-radius: 15px 15px 0 0 ;
+    border-radius: 10px 10px 0 0 ;
 }
 
 .main-menu__item:last-child {
-    border-radius: 0 0 15px 15px;
+    border-radius: 0 0 10px 10px;
     border-bottom: none;
 }
 
-.main-menu__item:hover {
-    background-color: rgba(36,28,42, 0.9);
+.main-menu__item_current {
+    display: inline-block;
+    border-bottom: none;
 }
 
-.main-menu__item:not(:last-child):hover:before{
-    position: absolute;
-    content: '';
-    bottom: 1px;
-    left: 0;
-    width: 100%;
+.main-menu__item_hidden {
+    display: none;
+}
+
+.main-menu:hover  {
+    background-color: rgba(54, 41, 62, 0.9);
+    border: 1px solid #051116;
+    border-radius: 10px;
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+.main-menu:hover .main-menu__item {
+    box-shadow: 0 -1px 0 0 rgba(105, 82, 114, 0.59) inset;
+}
+
+.main-menu:hover .main-menu__item_current {
+    border-bottom: 2px solid #35273d;
+}
+
+.main-menu:hover .main-menu__item_hidden {
+    display: block;
+}
+
+.main-menu:hover .main-menu__item:hover {
+    background-color: rgba(36,28,42, 0.9);
     border-bottom: 2px solid #edbfff;
 }
 
 .main-menu__item:last-child:hover{
-    border-bottom: 2px solid #edbfff;
-    border-radius: 0 0 15px 15px;
+    border-radius: 0 0 10px 10px;
 }
 
 .main-menu__link {
@@ -60,9 +70,9 @@
 .main-menu__link_current:before {
     position: absolute;
     content: '';
-    width: 100%;
-    bottom:0;
-    left: 0;
+    width: 120%;
+    bottom: 0;
+    left: -9%;
     border-bottom: 2px solid #edbfff;
 }
 
