--- a/Practice_2020/HW7-8/page-header/page-header.css
+++ b/Practice_2020/HW7-8/page-header/page-header.css
@@ -1,10 +1,20 @@
 .page-header {
+    position: relative;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
-.page-header__logo {}
+.page-header__logo {
+    margin-top: 70px;
+}
 
-.page-header__menu {}
+.page-header__main-menu {
+    position: absolute;
+    top: 139px;
 
+}
 
+.page-header__carousel {
+    margin-top: 178px;
+}
