--- a/Practice_2020/HW7-8/css/reset.css
+++ b/Practice_2020/HW7-8/css/reset.css
@@ -55,9 +55,9 @@ img {
 }
 
 /* Указываем понятную периодичность в потоке данных у article*/
-article > * + * {
+/*article > * + * {
   margin-top: 1em;
-}
+}*/
 
 /* Наследуем шрифты для инпутов и кнопок */
 input,
