finished MAIN for 320px

--- a/Practice_2020/HW7-8/page-header/page-header.css
+++ b/Practice_2020/HW7-8/page-header/page-header.css
@@ -25,7 +25,10 @@
     margin-top: 178px;
 }
 
-.page-header__carousel .carousel__item-title {
+.page-header__carousel .carousel__title {
     margin-bottom: -11px;
 }
 
+.page-header__pagination {
+    margin-top: 74px;
+}
