--- a/Practice_2020/HW7-8/fonts/fonts.css
+++ b/Practice_2020/HW7-8/fonts/fonts.css
@@ -8,9 +8,19 @@
 }
 
 @font-face {
-    font-family: 'Open_Sanslight';
+    font-family: 'Open_Sans';
     src: url('opensans-light-webfont.woff2') format('woff2'),
     url('opensans-light-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
+
+
+@font-face {
+    font-family: 'Open_Sans';
+    src: url('opensans-extrabold-webfont.woff2') format('woff2'),
+    url('opensans-extrabold-webfont.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
+
