--- a/Practice_2020/HW7-8/main-menu/main-menu.css
+++ b/Practice_2020/HW7-8/main-menu/main-menu.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: #ffffff;
 }
 
 .main-menu__item {
@@ -61,10 +62,6 @@
 .main-menu__link {
     position: relative;
     text-decoration: none;
-    text-transform: uppercase;
-    font-size: 24px;
-    font-family: LeagueGothic, Arial,sans-serif;
-    color: #fff;
 }
 
 .main-menu__link_current:before {
