--- a/Practice_2020/HW7-8/section-info/section-info.css
+++ b/Practice_2020/HW7-8/section-info/section-info.css
@@ -3,6 +3,7 @@
     padding-top: 64px;
     padding-bottom: 61px;
     padding-left: 74px;
+    color: #ffffff;
 }
 
 .section-info > * + * {
@@ -17,4 +18,5 @@
     display: inline-block;
     float: right;
     margin-top: 8px;
+    margin-right: 8px;
 }
