--- a/Practice_2020/HW7-8/text/text.css
+++ b/Practice_2020/HW7-8/text/text.css
@@ -5,6 +5,10 @@
     font-weight: normal;
 }
 
+.text span {
+    font-weight: bold;
+}
+
 .text-uppercase {
     color: inherit;
     font-family: LeagueGothic, Arial, sans-serif;
