--- a/Practice_2020/HW7-8/recent-updates/recent-updates.css
+++ b/Practice_2020/HW7-8/recent-updates/recent-updates.css
@@ -1,3 +1,9 @@
+.recent-updates {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .recent-updates__item {
     position: relative;
     margin-bottom: 17px;
@@ -14,6 +20,7 @@
 }
 
 .recent-updates__header {
+    align-self: self-start;
     margin-bottom: 9px;
     font-size: 30px;
     text-shadow: 1px 1px 0 rgba(255, 255, 255, 1);
@@ -24,9 +31,9 @@
 }
 
 .recent-updates__link {
-    float: right;
+    align-self: flex-end;
     margin-top: 3px;
-    margin-right: 16px;
+    margin-right: 6px;
 }
 
 .recent-updates__info {
