--- a/Practice_2020/HW7-8/banners/banners.css
+++ b/Practice_2020/HW7-8/banners/banners.css
@@ -4,19 +4,44 @@
     width: 100%;
     z-index: 5;
     background-color: #f9f9f9;
+    border-bottom: 1px solid #d8d8d8;
 }
 
 .banners__list {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 73%;
+    align-items: center;
+    width:64%;
 }
 
-.banners__link {
+.banners__link:nth-last-child(n+3) {
     margin-bottom: 62px;
 }
 
 .banners__link:last-child {
     margin-top: -19px;
+}
+
+/*480*/
+@media (min-width: 321px) {
+    .banners__list {
+        width: 68%;
+    }
+
+    .banners__link {
+        width: 22%;
+    }
+
+    .banners__link:nth-last-child(n+3) {
+        margin-bottom: 0;
+    }
+
+    .banners__link:not(:nth-child(3n)) {
+        margin-right: 17%;
+    }
+
+    .banners__link:nth-last-child(n+4) {
+        margin-bottom: 25px;
+    }
 }
