--- a/Practice_2020/HW7-8/main-content/main-content.css
+++ b/Practice_2020/HW7-8/main-content/main-content.css
@@ -1,7 +1,4 @@
 .main-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     padding-top: 70px;
     background-color: #f9f9f9;
     border-bottom: 1px solid #e6e6e6;
@@ -25,7 +22,8 @@
 }
 
 .main-content__article {
-    width: 82%;
+    align-self: flex-end;
+    width: 87%;
     padding-top: 19px;
     padding-bottom: 26px;
     padding-left: 34px;
@@ -43,14 +41,14 @@
 }
 
 .main-content__article-text {
-    padding-right: 16px;
+    padding-right: 6px;
     padding-left: 3px;
     letter-spacing: 0.015em ;
 }
 
 .main-content .article__icon {
     top: 17px;
-    left: -26px;
+    left: -27px;
     width: 53px;
     height: 52px;
     background-image: url("main-content_avatar.png");
@@ -66,4 +64,35 @@
 
 .main-content__recent-updates {
     margin-bottom: 84px;
+}
+/*480*/
+@media (min-width: 321px) {
+    .main-content__wrapper {
+        width: 100%;
+    }
+    .main-content__article {
+        width: 96%;
+        padding-right: 5px;
+        padding-bottom: 33px;
+        padding-left: 68px;
+        margin-right: 12px;
+    }
+
+    .main-content__article-subtitle {
+        display: inline;
+    }
+
+    .main-content__article .text-uppercase{
+        font-size: 30px;
+    }
+
+    .main-content .article__icon {
+        left: 3px;
+    }
+
+    .main-content__article-text {
+        padding-top: 7px;
+        padding-right: 7px;
+    }
+
 }
