--- a/Practice_2020/HW7-8/main-menu/main-menu.css
+++ b/Practice_2020/HW7-8/main-menu/main-menu.css
@@ -62,6 +62,7 @@
 .main-menu__link {
     position: relative;
     text-decoration: none;
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
 }
 
 .main-menu__link_current:before {
