--- a/Practice_2020/HW7-8/page-header/page-header.css
+++ b/Practice_2020/HW7-8/page-header/page-header.css
@@ -1,4 +1,5 @@
 .page-header {
+    position: relative;
     width: 100%;
     border-bottom: 1px solid #35283c;
     background: url("page-background.jpg")  -1048px 0 no-repeat;
@@ -31,4 +32,33 @@
 
 .page-header__pagination {
     margin-top: 74px;
+}
+
+@media (min-width: 321px) {
+    .page-header {
+        background-position: -968px 0;
+    }
+
+    .page-header__wrapper {
+        padding-bottom: 60px;
+    }
+
+    .page-header:after {
+        position: absolute;
+        left: 0;
+        top: 203px;
+        display: block;
+        content: '';
+        width: 100%;
+        height: 246px;
+        background: rgba(0, 0, 0, 0.2);
+    }
+
+    .page-header__carousel {
+        margin-top: 83px;
+    }
+
+    .page-header__pagination {
+        margin-top: -25px;
+    }
 }
