--- a/Practice_2020/HW7-8/hidden/hidden.css
+++ b/Practice_2020/HW7-8/hidden/hidden.css
@@ -6,6 +6,10 @@
     display: none;
 }
 
+.hidden_less-than-768 {
+    display: none;
+}
+
 .hidden_less-than-960 {
     display: none;
 }
@@ -13,5 +17,11 @@
 @media (min-width: 321px) {
     .hidden_less-than-320 {
         display: inline-block;
+    }
+}
+
+@media (min-width: 481px) {
+    .hidden_less-than-768 {
+        display: -webkit-box;
     }
 }
