--- a/Practice_2020/HW7-8/banners/banners.css
+++ b/Practice_2020/HW7-8/banners/banners.css
@@ -45,3 +45,30 @@
         margin-bottom: 25px;
     }
 }
+
+/*768*/
+@media (min-width: 481px) {
+    .banners__list {
+        width: 100%;
+        justify-content: space-around;
+    }
+
+    .banners__link {
+        width: auto;
+    }
+
+    .banners__link:last-child {
+        margin-top: 0;
+    }
+    .banners__link:nth-last-child(n+3) {
+        margin-bottom: 0;
+    }
+
+    .banners__link:not(:nth-child(3n)) {
+        margin-right: 0;
+    }
+
+    .banners__link:nth-last-child(n+4) {
+        margin-bottom: 0;
+    }
+}
