--- a/Practice_2020/HW7-8/page/page.css
+++ b/Practice_2020/HW7-8/page/page.css
@@ -17,4 +17,21 @@
     .page__banners-list {
         margin: 35px 0 43px 0;
     }
+
+    .page__news {
+        padding-top: 56px;
+        padding-bottom: 90px;
+    }
+}
+
+/*768*/
+@media (min-width: 481px) {
+    .page__banners-list {
+        margin: 25px 0 29px 0;
+    }
+
+    .page__news {
+        padding-top: 40px;
+        padding-bottom: 97px;
+    }
 }
