--- a/Practice_2020/HW7-8/article/article.css
+++ b/Practice_2020/HW7-8/article/article.css
@@ -48,3 +48,10 @@
         margin-right: 5%;
     }
 }
+
+@media (min-width: 769px) {
+    .article__link {
+        margin-top: 14px;
+        margin-right: 0;
+    }
+}
