--- a/Practice_2020/HW7-8/banners/banners.css
+++ b/Practice_2020/HW7-8/banners/banners.css
@@ -72,3 +72,12 @@
         margin-bottom: 0;
     }
 }
+
+/*960*/
+
+@media (min-width: 769px) {
+    .banners__list {
+        max-width: 960px;
+        justify-content: space-evenly;
+    }
+}
