--- a/Practice_2020/HW7-8/hidden/hidden.css
+++ b/Practice_2020/HW7-8/hidden/hidden.css
@@ -25,3 +25,9 @@
         display: -webkit-box;
     }
 }
+
+@media (min-width: 769px) {
+    .hidden_less-than-960 {
+        display: inline;
+    }
+}
