--- a/Practice_2020/HW7-8/recent-updates/recent-updates.css
+++ b/Practice_2020/HW7-8/recent-updates/recent-updates.css
@@ -81,10 +81,39 @@
     }
 
     .recent-updates__item {
-        padding-left: 28%;
+        padding-left: 30%;
     }
 
     .recent-updates__icon {
         left: 11%;
+    }
+
+    .recent-updates__info {
+        white-space: normal;
+    }
+}
+
+/*960*/
+@media (min-width: 769px){
+    .recent-updates__header {
+        margin-left: 12%;
+    }
+
+    .recent-updates__item {
+        padding-left: 26%;
+    }
+
+    .recent-updates__icon {
+        left: 12%;
+    }
+
+    .recent-updates__info {
+        white-space: nowrap;
+    }
+
+    .recent-updates .recent-updates__link {
+        font-size: 18px;
+        align-self: flex-end;
+        margin-right: 0;
     }
 }
