--- a/Practice_2020/HW7-8/footer/footer.css
+++ b/Practice_2020/HW7-8/footer/footer.css
@@ -1,8 +1,14 @@
 .footer {
     display: flex;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+}
+
+.footer__wrapper {
+    display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
     width: 100%;
 }
 
@@ -36,6 +42,7 @@
 /*480*/
 @media (min-width: 321px) {
     .footer__menu {
+
         margin-top: 41px;
         width: 100%;
     }
@@ -88,17 +95,20 @@
 }
 
 /*768*/
-@media (min-width: 321px) {
+@media (min-width: 481px) {
 
     .footer__menu {
-        margin-left: 5%;
+        align-self: flex-start;
+        margin-top: 41px;
+        margin-left: 3%;
+        width: 95%;
     }
 
     .footer .main-menu {
         justify-content: flex-start;
     }
 
-    .footer .main-menu__item {
+   .footer .main-menu__item {
         margin-right: 6%;
     }
 
@@ -109,5 +119,43 @@
     .footer__text {
         align-self: flex-end;
         margin-right: 1%;
+    }
+}
+
+/*960*/
+
+@media (min-width: 769px) {
+    .footer {
+        max-height: 113px;
+    }
+
+    .footer:before {
+        min-height: 113px;
+    }
+
+    .footer__wrapper {
+        flex-direction: row;
+        justify-content: space-between;
+        width: 96%;
+        max-width: 960px;
+        margin-top: 40px;
+    }
+
+    .footer__menu {
+        margin: 0;
+        width: 58%;
+    }
+
+    .footer .main-menu__item {
+        margin-right: 0;
+    }
+
+    .footer .main-menu {
+        justify-content: space-between;
+        width: 100%;
+    }
+
+    .footer__text {
+        margin: 0;
     }
 }
